# github-release-downloader

./: .git-blame-ignore-revs  README.md  pyproject.toml
.github/workflows/: pyright.yml
src/grd/: __init__.py  __main__.py  alembic.ini  client.py  dirs.py
src/grd/alembic/: env.py
src/grd/alembic/versions/: 2023_03_14_1509-eb5168ad3f96_.py  2023_03_14_2325-8a389e11637b_.py  2023_03_19_1543-aabcf8edaffc_.py  2023_03_19_1751-ab386fa3838e_.py
src/grd/cli/: __init__.py  click_types.py  errors.py  state.py  streams.py  utils.py
src/grd/cli/commands/: __init__.py  auth.py  cache.py  download.py  encrypt.py  main.py
src/grd/client/: __init__.py  base.py  cache.py  dates.py  http.py  models.py  protocols.py  release.py
src/grd/database/: __init__.py  cache.py  engine.py  models.py
