[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-release-downloader"
description = "A command-line program for downloading GitHub release assets."
authors = [{ name = "thegamecracks" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = []
dependencies = [
    "appdirs~=1.4",
    "httpx~=0.23.3",
    "tqdm~=4.65.0",
]
dynamic = ["version"]

[project.scripts]
grd = "grd:__main__"

[tool.setuptools.dynamic]
version = { attr = "grd.__version__" }
