[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-release-downloader"
description = "A command-line program for downloading GitHub release assets."
authors = [{ name = "thegamecracks" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = []
dependencies = [
    "alembic~=1.10",
    "appdirs~=1.4",
    "click~=8.1",
    "httpx~=0.23.3",
    "InquirerPy~=0.3.4",
    "pydantic~=1.10",
    "SQLAlchemy~=2.0",
    "tqdm~=4.65",
]
dynamic = ["version"]

[project.scripts]
grd = "grd.cli:main"

[tool.pyright]
reportPrivateImportUsage = "none"

[tool.setuptools.dynamic]
version = { attr = "grd.__version__" }
